Added tables and outline for PS and Goals document

--- a/docs/ProblemStatmentAndGoals/ProblemStatementAndGoals.tex
+++ b/docs/ProblemStatmentAndGoals/ProblemStatementAndGoals.tex
@@ -45,23 +45,70 @@
 
 \begin{document}
 	
-	\nobibliography{SmithCollectedRefs}
 	\bibliographystyle{plainnat}
 	
 	\maketitle
-	
-	\noindent This ...
-	
-	\section {Section}
-	
-	\section {Section}
-	
-	
-	\subsection{Sub Section 1}
-	
-	
-	\subsection{Sub Section 2}
-	
 
 	
+\section {Overview}
+
+\section {Problem Statement}
+
+\section {Goals}
+%Goals measure 'what' not 'how'
+%Goals should be measureable
+%Goals are selling points
+	\begin{tabular}{ |p{6cm}|p{10cm}| }
+		\hline
+		\multicolumn{2}{|c|}{Goal Descriptions} \\
+		\hline
+		Goal Name & blah blah blah \\
+		\hline
+		Name & blah blah blah \\
+		\hline
+		Name & blah blah blah \\
+		\hline
+		Name & blah blah blah \\
+		\hline
+		Name & blah blah blah \\
+		\hline
+	\end{tabular}
+
+\subsection{Stretch Goals}
+
+\section {Development Plan}
+
+\subsection{Team meeting plan}
+Team meetings will be conducted weekly on non-holiday Mondays at 4:30pm.
+Further meetings can be scheduled if needed.
+Meetings will be conducted in person at a McMaster bookable room or library unless specified otherwise.
+
+\subsection{Team communication plan}
+All team communication ...
+Any online meetings ...
+
+\subsection{Workflow plan}
+git
+
+\subsection{Team Roles}
+	\begin{tabular}{ |p{6cm}|p{10cm}| }
+	\hline
+	\multicolumn{2}{|c|}{Team Role Descriptions} \\
+	\hline
+	Role & blah blah blah \\
+	\hline
+	Role & blah blah blah \\
+	\hline
+	Role & blah blah blah \\
+	\hline
+	Role & blah blah blah \\
+	\hline
+	Role & blah blah blah \\
+	\hline
+\end{tabular}
+
+\subsection{Coding Style and Standards}
+lint
+\section {POC Demo Plan}
+
 \end{document}
