--- a/docs/Common.tex
+++ b/docs/Common.tex
@@ -1,6 +1,6 @@
 
 \newcommand{\progname}{Software Eng 4G06} % PUT YOUR PROGRAM NAME HERE
-\newcommand{\authname}{Team \#, Team Name
+\newcommand{\authname}{Team 2, Parnas' Pals
 	\\ Jared Bentvelsen
 	\\ Bassel Rezkalla
 	\\ Yuvraj Randhawa
