--- a/docs/ProblemStatmentAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatmentAndGoals/ProblemStatement.tex
@@ -84,23 +84,46 @@ Supported platforms: iOS/Android mobile application, web application accessible 
 
 \section{Goals}
 
-	\begin{tabular}{ |p{5cm}|p{8cm}| }
+\begin{tabular}{ |p{5cm}|p{8cm}| }
 	\hline
-	\multicolumn{2}{|c|}{Goal Descriptions} \\
+	\multicolumn{2}{|c|}{Goal Descriptions } \\
 	\hline
-	Goal Name & blah blah blah \\
+	Goals & Explanation \\
 	\hline
-	Name & blah blah blah \\
+	The app should provide a fast, efficient, and easy way to create Programs. & Creating a program shouldn’t feel like pulling teeth. It should feel more intuitive and convinient than creating a program on an excel spreadsheet. Otherwise the value of using this app decreases.  \\
 	\hline
-	Name & blah blah blah \\
+	App provides and accessible way for users to search for programs that are inline with their goals. & blah blah blah \\
 	\hline
-	Name & blah blah blah \\
+	User’s can use active programs in a way that doesn’t intrude or interupt their workout & Tracking/logging workouts is an essential part to ensuring that the user is on track with their goals. However, it can be a tedious process that is often left out. The success of the app will be heavily depedant on whether tracking and logging workouts isn’t a tedious process. \\
 	\hline
-	Name & blah blah blah \\
+	Programs should be polymorphic - they can accomodate any style of workout. & Fitness programs can be pretty diverse. There’s a wide range of way’s to configure a program. These options include duration, workout intervals, exercise content, etc. It is important for the program creation section of the app to be efficient in creating a diverse range of programs. \\
+  \hline
+	App presents data about the user’s active program that is insightful and analytical. & Not seeing immediate results can be turn people away from working around \\
 	\hline
 \end{tabular}
 
 \subsection{Stretch Goals}
+
+\begin{tabular}{ |p{5cm}|p{8cm}| }
+	\hline
+	Goals & Explanation \\
+	\hline
+	Diet Planning & Users can track their diets and include diet information in their custom workout plans. Some workouts are
+	designed around bulking or cutting calories and so including diet info will improve utility. \\
+	\hline
+	Recommended Workouts Algorithm & Users can receive new workouts in a "Recommended" tab. These workouts will be selected for the user by analyzing
+	their past plan history and plan tags. Popular and new workouts will be recommended to the user. This will improve discoverability and improve
+	 user experience and keep them on the app for longer.  \\
+	\hline
+	History of growth and projection of potential future growth & tbd \\
+	\hline
+	Social Growth Analytics & Users can view a network of other users who have similar goals and learn from their progress.
+	Users who improved their abilities by following a regimen can act as a guide to others looking to make progress. This feature can improve
+	users' ability to see success with our app. \\
+	\hline
+\end{tabular}
+
+
 
 \section{Inputs and Outputs}
 
@@ -170,4 +193,44 @@ A language specific linter will be enforced.
 \subsection {Risks}
 
 
+	
+	
+	\section{Inputs and Outputs}
+	
+	\section {Development Plan}
+	
+	\subsection{Team meeting plan}
+	Team meetings will be conducted weekly on non-holiday Mondays at 4:30pm.
+	Further meetings can be scheduled if needed.
+	Meetings will be conducted in person at a McMaster bookable room or library unless specified otherwise.
+	
+	\subsection{Team communication plan}
+	All team communication will be conducted 
+	Any online meetings will be conducted on Mircosoft teams in a specified 
+	
+	\subsection{Workflow plan}
+	git
+	
+	\subsection{Team Roles}
+	\begin{tabular}{ |p{5cm}|p{8cm}| }
+		\hline
+		\multicolumn{2}{|c|}{Team Role Descriptions} \\
+		\hline
+		Role & blah blah blah \\
+		\hline
+		Role & blah blah blah \\
+		\hline
+		Role & blah blah blah \\
+		\hline
+		Role & blah blah blah \\
+		\hline
+		Role & blah blah blah \\
+		\hline
+	\end{tabular}
+	
+	\subsection{Coding Style and Standards}
+	lint
+	
+	\section {POC Demo Plan}
+	
 \end{document}
