--- a/docs/ProblemStatmentAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatmentAndGoals/ProblemStatement.tex
@@ -88,13 +88,13 @@ Supported platforms: iOS/Android mobile application, web application accessible 
 	\hline
 	\multicolumn{2}{|c|}{Goal Descriptions } \\
 	\hline
-	Goals & Explanation \\
+	Goal Name & Explanation \\
 	\hline
-	The app should provide a fast, efficient, and easy way to create Programs. & Creating a program shouldn’t feel like pulling teeth. It should feel more intuitive and convinient than creating a program on an excel spreadsheet. Otherwise the value of using this app decreases.  \\
+	Not seeing immediate results can be turn people away from working around & Not seeing immediate results can be turn people away from working around \\
 	\hline
 	App provides and accessible way for users to search for programs that are inline with their goals. & blah blah blah \\
 	\hline
-	User’s can use active programs in a way that doesn’t intrude or interupt their workout & Tracking/logging workouts is an essential part to ensuring that the user is on track with their goals. However, it can be a tedious process that is often left out. The success of the app will be heavily depedant on whether tracking and logging workouts isn’t a tedious process. \\
+	Tracking/logging workouts is an essential part to ensuring that the user is on track with their goals. However, it can be a tedious process that is often left out. The success of the app will be heavily depedant on whether tracking and logging workouts isn’t a tedious process. & blah blah blah \\
 	\hline
 	Programs should be polymorphic - they can accomodate any style of workout. & Fitness programs can be pretty diverse. There’s a wide range of way’s to configure a program. These options include duration, workout intervals, exercise content, etc. It is important for the program creation section of the app to be efficient in creating a diverse range of programs. \\
   \hline
