initial goals commit

--- a/docs/ProblemStatmentAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatmentAndGoals/ProblemStatement.tex
@@ -55,13 +55,13 @@ Use abstraction so that you can avoid details.}
 	\hline
 	\multicolumn{2}{|c|}{Goal Descriptions} \\
 	\hline
-	Goal Name & blah blah blah \\
+	Goal Name & Explanation \\
 	\hline
-	Name & blah blah blah \\
+	Not seeing immediate results can be turn people away from working around & Not seeing immediate results can be turn people away from working around \\
 	\hline
-	Name & blah blah blah \\
+	App provides and accessible way for users to search for programs that are inline with their goals. & blah blah blah \\
 	\hline
-	Name & blah blah blah \\
+	Tracking/logging workouts is an essential part to ensuring that the user is on track with their goals. However, it can be a tedious process that is often left out. The success of the app will be heavily depedant on whether tracking and logging workouts isn’t a tedious process. & blah blah blah \\
 	\hline
 	Name & blah blah blah \\
 	\hline
