updated workflow plan for git and communication

--- a/docs/ProblemStatmentAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatmentAndGoals/ProblemStatement.tex
@@ -79,11 +79,35 @@ Further meetings can be scheduled if needed.
 Meetings will be conducted in person at a McMaster bookable room or library unless specified otherwise.
 
 \subsection{Team communication plan}
-All team communication will be conducted 
-Any online meetings will be conducted on Mircosoft teams in a specified 
+Common team communication and questions will be conducted on \textbf{Mircosoft Teams}.\\
+Any online meetings will be conducted on \textbf{Mircosoft Teams}. \\
 
 \subsection{Workflow plan}
-git
+GitHub will be used for all workflow and version control.
+
+\subsubsection{Task Scheduling}
+The \textbf{Github Kanban} project board will be used to plan and assign upcomming and ongoing tasks to team developers. \\
+If a task is large or general, sub-tasks will be created and assigend accordingly.\\
+Upcomming project delieverables must include deadlines.\\
+
+\subsubsection{Git Branch Usage}
+All features, documents and file changes require a named branch describing the change.
+Branches will follow a similar format to:
+
+\begin{center}
+	$topic\_or\_type/section/branch\_description$
+\end{center}
+
+\subsubsection{Git Commits}
+\textbf{Tags} will be attached to commits as needed to further display the change description.\\
+Commit Squashing may be used prior to creating pull requests to clean up unnecessary commits.
+
+\subsubsection{Git Branch Merging and Pull Requests}
+The main or centered branch will be protected such that new features and addtions will require a pull request in order to be merged. \\
+Pull Requests require a minimum of 2 approvals to be accepted.
+
+\subsubsection{Technial Issues}
+For all technial questions, concerns and issues, the \textbf{Github Issues} feature will be used to open an issue or concern accordingly.
 
 \subsection{Team Roles}
 \begin{tabular}{ |p{5cm}|p{8cm}| }
@@ -92,19 +116,25 @@ git
 	\hline
 	Role & blah blah blah \\
 	\hline
-	Role & blah blah blah \\
+	Front End Expert & Dimitri \\
 	\hline
-	Role & blah blah blah \\
+	Database Expert  & Jared \\
 	\hline
-	Role & blah blah blah \\
+	UX/UI Expert & Matt \\
 	\hline
 	Role & blah blah blah \\
 	\hline
 \end{tabular}
 
 \subsection{Coding Style and Standards}
-lint
+The \textbf{Google Coding Style} will be used as a standard for all code in the project. \\
+The style guide for this can be found \hyperlink{https://google.github.io/styleguide/}{here.}
+A language specific linter will be enforced.
 
-\section {POC Demo Plan}
+\subsection{Testing}
+
+
+\subsection {Risks}
+
 
 \end{document}
