Add problem statement draft 0
Note: Environment is a bit iffy, gotta ask Spencer maybe

Also added Wiliam's name to Author list

--- a/docs/Common.tex
+++ b/docs/Common.tex
@@ -1,6 +1,7 @@
 
 \newcommand{\progname}{Software Eng 4G06} % PUT YOUR PROGRAM NAME HERE
 \newcommand{\authname}{Team 2, Parnas' Pals
+	\\ William Lee
 	\\ Jared Bentvelsen
 	\\ Bassel Rezkalla
 	\\ Yuvraj Randhawa
