added team roles

--- a/docs/ProblemStatmentAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatmentAndGoals/ProblemStatement.tex
@@ -114,15 +114,33 @@ For all technial questions, concerns and issues, the \textbf{Github Issues} feat
 	\hline
 	\multicolumn{2}{|c|}{Team Role Descriptions} \\
 	\hline
-	Role & blah blah blah \\
+	Meeting Organizer & William \\
 	\hline
 	Front End Expert & Dimitri \\
 	\hline
-	Database Expert  & Jared \\
+	Database Experts  & Jared, Bassel \\
 	\hline
-	UX/UI Expert & Matt \\
+	UX/UI Expert & Matthew \\
 	\hline
-	Role & blah blah blah \\
+	Networking Protocols Expert & Bassel \\
+	\hline
+	Backend Expert & Jared, William \\
+	\hline
+	Lead Testers & Yuvi, Bassel \\
+	\hline
+	Team Liason & Jared \\
+	\hline
+	Backup-Team Liason & William \\
+	\hline
+	Git Experts & Yuvi, Matthew\\
+	\hline
+	Scrum Leader & William \\
+	\hline
+	Mobile Development Expert & Dimitri, Matthew \\
+	\hline
+	Latex Expert & Yuvi \\
+	\hline
+	Hardware Expert & Bassel \\
 	\hline
 \end{tabular}
 
