added team roles

--- a/docs/ProblemStatmentAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatmentAndGoals/ProblemStatement.tex
@@ -120,7 +120,7 @@ For all technial questions, concerns and issues, the \textbf{Github Issues} feat
 	\hline
 	Database Experts  & Jared, Bassel \\
 	\hline
-	UX/UI Expert & Matthew \\
+	UX/UI Expert & Matthew, Dimitri \\
 	\hline
 	Networking Protocols Expert & Bassel \\
 	\hline
