--- a/docs/ProblemStatmentAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatmentAndGoals/ProblemStatement.tex
@@ -86,19 +86,17 @@ Supported platforms: iOS/Android mobile application, web application accessible 
 
 \begin{tabular}{ |p{5cm}|p{8cm}| }
 	\hline
-	\multicolumn{2}{|c|}{Goal Descriptions } \\
-	\hline
 	Goal Name & Explanation \\
 	\hline
-	The app should provide a fast, efficient, and easy way to create Programs. & Creating a program shouldn't feel like pulling teeth. It should feel more intuitive and convinient than creating a program on an excel spreadsheet. Otherwise the value of using this app decreases.  \\
+	The app should provide a fast, efficient, and easy way to create programs. & Creating a program shouldn't feel like pulling teeth. It should feel more intuitive and convenient than creating a program on an excel spreadsheet - otherwise the value provided by this app decreases.  \\
 	\hline
-	App provides an accessible way for users to discover programs that are inline with their goals & A user should be able to search for programs in a simple manner. The programs presented should be very informative in regards to whether or not they work. \\
+	App provides an accessible way for users to discover programs that are in-line with their goals & A user should be able to search for programs in a simple manner. The programs presented should be very informative in regards to whether or not they work. \\
 	\hline
-	User's can use active programs in a way that doesn't intrude or interupt their workout & Tracking/logging workouts is an essential part to ensuring that the user is on track with their goals. However, it can be a tedious process that is often left out. The success of the app will be heavily depedant on whether tracking and logging workouts isn't a tedious process. \\
+	Users can use active programs in a way that doesn't intrude or interrupt their workout & Tracking/logging workouts is an essential part to ensuring that the user is on track with their goals. However, it has traditionally been a tedious process that is often neglected. Tracking and logging workouts should be a streamlined process. \\
 	\hline
-	Programs should be polymorphic - they can accomodate any style of workout. & Fitness programs can be pretty diverse. There's a wide range of way's to configure a program. These options include duration, workout intervals, exercise content, etc. It is important for the program creation section of the app to be efficient in creating a diverse range of programs. \\
+	Programs should be polymorphic - they can accommodate any style of workout. & Fitness programs can be quite diverse. There’s a wide range of ways to configure a program - programs can vary by duration, workout intervals, exercise content, etc. It is important for the program creation process to allow efficient creation of diverse ranges of programs. \\
   \hline
-	App presents data about the user's active program that is insightful and analytical that may not be evident to the user. & Not seeing immediate results can be turn people away from sticking with their workout regiment. Displaying insightful user statistics throughout the duration of their program can create a postivie feedback loop of hard work and rewards. It's important that the statistics presented are not necessarily obvious and evident to the user.   \\
+	App presents data about the user's active program that is insightful and analytical that may not be evident to the user. & Not seeing immediate results can turn people away from sticking with their workout regiment. Displaying insightful user statistics throughout the duration of their program can create a positive feedback loop of hard work vs. rewards. It's important that the statistics presented are not necessarily obvious and evident to the user.   \\
 	\hline
 \end{tabular}
 
