--- a/docs/ProblemStatmentAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatmentAndGoals/ProblemStatement.tex
@@ -167,7 +167,7 @@ A language specific linter will be enforced.
 \subsection{Testing}
 
 \subsubsection {Unit Testing}
-\textbf{\href{https://jestjs.io/}{Jest}} will be used for this app's unit testing. Jest is a popular Javascript testing framework that will be used to verify code correctness. Other features offered by Jest that will prove useful include mocking and code coverage insights.
+\textbf{\href{https://jestjs.io/}{Jest}} will be used for this app's unit testing. Jest offers mocking and code coverage insights which will be useful for unit testing.
 
 \subsubsection {Simulation / Integration Testing}
 \textbf{\href{https://testcafe.io/}{TestCafe}}} will be used for this app's integration testing. TestCafe is a cross-browser integration testing framework that will be used to verify proper integration between the app's various components (back-end, front-end, database, etc). TestCafe also offers end-to-end testing which includes automatic simulation of many common web-app components such as forms and buttons.
