--- a/docs/ProblemStatmentAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatmentAndGoals/ProblemStatement.tex
@@ -84,25 +84,42 @@ Supported platforms: iOS/Android mobile application, web application accessible 
 
 \section{Goals}
 
-	\begin{tabular}{ |p{5cm}|p{8cm}| }
+\begin{tabular}{ |p{5cm}|p{8cm}| }
 	\hline
-	\multicolumn{2}{|c|}{Goal Descriptions} \\
+	Goal Name & Explanation \\
 	\hline
-	Goal Name & blah blah blah \\
+	The app should provide a fast, efficient, and easy way to create programs. & Creating a program shouldn't feel like pulling teeth. It should feel more intuitive and convenient than creating a program on an excel spreadsheet - otherwise the value provided by this app decreases.  \\
 	\hline
-	Name & blah blah blah \\
+	App provides an accessible way for users to discover programs that are in-line with their goals & A user should be able to search for programs in a simple manner. The programs presented should be very informative in regards to whether or not they work. \\
 	\hline
-	Name & blah blah blah \\
+	Users can use active programs in a way that doesn't intrude or interrupt their workout & Tracking/logging workouts is an essential part to ensuring that the user is on track with their goals. However, it has traditionally been a tedious process that is often neglected. Tracking and logging workouts should be a streamlined process. \\
 	\hline
-	Name & blah blah blah \\
-	\hline
-	Name & blah blah blah \\
+	Programs should be polymorphic - they can accommodate any style of workout. & Fitness programs can be quite diverse. There’s a wide range of ways to configure a program - programs can vary by duration, workout intervals, exercise content, etc. It is important for the program creation process to allow efficient creation of diverse ranges of programs. \\
+  \hline
+	App presents data about the user's active program that is insightful and analytical that may not be evident to the user. & Not seeing immediate results can turn people away from sticking with their workout regiment. Displaying insightful user statistics throughout the duration of their program can create a positive feedback loop of hard work vs. rewards. It's important that the statistics presented are not necessarily obvious and evident to the user.   \\
 	\hline
 \end{tabular}
 
 \subsection{Stretch Goals}
 
-\section{Inputs and Outputs}
+\begin{tabular}{ |p{5cm}|p{8cm}| }
+	\hline
+	Goals & Explanation \\
+	\hline
+	Diet Planning & Users can track their diets and include diet information in their custom workout plans. Some workouts are
+	designed around bulking or cutting calories and so including diet info will improve utility. \\
+	\hline
+	Recommended Workouts Algorithm & Users can receive new workouts in a "Recommended" tab. These workouts will be selected for the user by analyzing
+	their past plan history and plan tags. Popular and new workouts will be recommended to the user. This will improve discoverability and improve
+	 user experience and keep them on the app for longer.  \\
+	\hline
+	History of growth and projection of potential future growth & tbd \\
+	\hline
+	Social Growth Analytics & Users can view a network of other users who have similar goals and learn from their progress.
+	Users who improved their abilities by following a regimen can act as a guide to others looking to make progress. This feature can improve
+	users' ability to see success with our app. \\
+	\hline
+\end{tabular}
 
 \section {Development Plan}
 
