Fix spelling mistakes (#7)
* Fix spelling mistakes

* Add new named files

--- a/docs/ProblemStatementAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatementAndGoals/ProblemStatement.tex
@@ -129,16 +129,16 @@ Further meetings can be scheduled if needed.
 Meetings will be conducted in person at a McMaster bookable room or library unless specified otherwise.
 
 \subsection{Team communication plan}
-Common team communication and questions will be conducted on \textbf{Mircosoft Teams}.\\
-Any online meetings will be conducted on \textbf{Mircosoft Teams}. \\
+Common team communication and questions will be conducted on \textbf{Microsoft Teams}.\\
+Any online meetings will be conducted on \textbf{Microsoft Teams}. \\
 
 \subsection{Workflow plan}
 GitHub will be used for all workflow and version control.
 
 \subsubsection{Task Scheduling}
-The \textbf{Github Kanban} project board will be used to plan and assign upcomming and ongoing tasks to team developers. \\
-If a task is large or general, sub-tasks will be created and assigend accordingly.\\
-Upcomming project delieverables must include deadlines.\\
+The \textbf{Github Kanban} project board will be used to plan and assign upcoming and ongoing tasks to team developers. \\
+If a task is large or general, sub-tasks will be created and assigned accordingly.\\
+Upcoming project deliverables must include deadlines.\\
 
 \subsubsection{Git Branch Usage}
 All features, documents and file changes require a named branch describing the change.
@@ -153,11 +153,11 @@ Branches will follow a similar format to:
 Commit Squashing may be used prior to creating pull requests to clean up unnecessary commits.
 
 \subsubsection{Git Branch Merging and Pull Requests}
-The main or centered branch will be protected such that new features and addtions will require a pull request in order to be merged. \\
+The main or centered branch will be protected such that new features and additions will require a pull request in order to be merged. \\
 Pull Requests require a minimum of 2 approvals to be accepted.
 
 \subsubsection{Technial Issues}
-For all technial questions, concerns and issues, the \textbf{Github Issues} feature will be used to open an issue or concern accordingly.
+For all technical questions, concerns and issues, the \textbf{Github Issues} feature will be used to open an issue or concern accordingly.
 
 \subsection{Team Roles}
 \begin{tabular}{ |p{5cm}|p{8cm}| }
