Fix Revision History table, Fix Will's tomfoolery

--- a/docs/ProblemStatementAndGoals/ProblemStatement.tex
+++ b/docs/ProblemStatementAndGoals/ProblemStatement.tex
@@ -17,16 +17,14 @@
 \maketitle
 
 \begin{table}[hp]
-\caption{Revision History} \label{TblRevisionHistory}
-\begin{tabularx}{\textwidth}{llX}
-\toprule
-\textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
-\midrule
-24/09/22 & Jared Bentvelsen, Yuvraj Randhawa, Bassel Rezkalla & Initial draft of Problem Statement\\
-Date2 & Name(s) & Description of changes\\
-... & ... & ...\\
-\bottomrule
-\end{tabularx}
+	\caption{Revision History} \label{TblRevisionHistory}
+	\begin{tabularx}{\textwidth}{|X|X|X|}
+		\toprule
+		\textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
+		\midrule
+		24/09/22 & Jared Bentvelsen, Yuvraj Randhawa, Bassel Rezkalla & Initial draft of Problem Statement\\
+		\bottomrule
+	\end{tabularx}
 \end{table}
 
 \section{Problem Statement}
@@ -205,7 +203,7 @@ A language specific linter will be enforced.
 \textbf{\href{https://jestjs.io/}{Jest}} will be used for this app's unit testing. Jest offers mocking and code coverage insights which will be useful for unit testing.
 
 \subsubsection {Simulation / Integration Testing}
-\textbf{\href{https://testcafe.io/}{TestCafe}}} will be used for this app's integration testing. TestCafe is a cross-browser integration testing framework that will be used to verify proper integration between the app's various components (back-end, front-end, database, etc). TestCafe also offers end-to-end testing which includes automatic simulation of many common web-app components such as forms and buttons.
+\textbf{\href{https://testcafe.io/}{TestCafe}} will be used for this app's integration testing. TestCafe is a cross-browser integration testing framework that will be used to verify proper integration between the app's various components (back-end, front-end, database, etc). TestCafe also offers end-to-end testing which includes automatic simulation of many common web-app components such as forms and buttons.
 
 \subsection {Risks}
 
