--- a/sample_latex.tex
+++ b/sample_latex.tex
@@ -194,20 +194,8 @@ For all technical questions, concerns and issues, the \textbf{Github Issues} fea
 	\hline
 \end{tabular}
 
-\subsection{Coding Style and Standards}
-The \textbf{Google Coding Style} will be used as a standard for all code in the project. \\
-The style guide for this can be found \hyperlink{https://google.github.io/styleguide/}{here.}
-A language specific linter will be enforced.
+\subsdaksml
 
-\subsection{Testing}
-
-\subsubsection {Unit Testing}
-\textbf{\href{https://jestjs.io/}{Jest}} will be used for this app's unit testing. Jest offers mocking and code coverage insights which will be useful for unit testing.
-
-\subsubsection {Simulation / Integration Testing}
-\textbf{\href{https://testcafe.io/}{TestCafe}}} will be used for this app's integration testing. TestCafe is a cross-browser integration testing framework that will be used to verify proper integration between the app's various components (back-end, front-end, database, etc). TestCafe also offers end-to-end testing which includes automatic simulation of many common web-app components such as forms and buttons.
-
-\subsection {Risks}
-
+Pedontic
 
 \end{document}
