--- a/sample_latex.tex
+++ b/sample_latex.tex
@@ -196,4 +196,6 @@ For all technical questions, concerns and issues, the \textbf{Github Issues} fea
 
 \subsdaksml
 
-Peonitic
+Garbanz
+
+\end{document}
