--- a/sample_latex.tex
+++ b/sample_latex.tex
@@ -198,6 +198,6 @@ For all technical questions, concerns and issues, the \textbf{Github Issues} fea
 
 Garbanzooooo
 
-thise is a chgne anotr oper tomat
+thise is a chgne anotr oper tomat diff
 
 \end{document}
