--- a/sample_latex.tex
+++ b/sample_latex.tex
@@ -198,6 +198,6 @@ For all technical questions, concerns and issues, the \textbf{Github Issues} fea
 
 Garbanzooooo
 
-thise is a chgne anotr oper tomat diff make a gnaege
+thise is a chgne anotr oper tomat diff make a gnaege anote
 
 \end{document}
