--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -234,7 +234,7 @@ characteristics and lists the system constraints.  \plt{This text can likely be
 \plt{For each of the entities in the system context diagram its responsibilities
   should be listed.  Whenever possible the system should check for data quality,
   but for some cases the user will need to assume that responsibility.  The list
-  of responsibilites should be about the inputs and outputs only, and they
+  of responsibilities should be about the inputs and outputs only, and they
   should be abstract.  Details should not be presented here.  However, the
   information should not be so abstract as to just say ``inputs'' and
   ``outputs''.  A summarizing phrase can be used to characterize the inputs.
@@ -314,12 +314,12 @@ be covered in the Verification and Validation document.}
   solution you are allowed to be.  This is discussed under accuracy.}
 \subsection{Look and Feel Requirements}
 \subsection{Usability and Humanity Requirements}
-\subsection{Preformance Requirements}
+\subsection{Performance Requirements}
 \subsection{Operational and Environmental Requirements}
 \subsection{Maintainability and Support Requirements}
-\subsection{Secruity Requirements}
+\subsection{Security Requirements}
 \subsection{Cultural Requirements}
-\subsection{Complience Requirements}
+\subsection{Compliance Requirements}
 
 \noindent \begin{itemize}
 
