--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -267,7 +267,7 @@ characteristics and lists the system constraints.  \plt{This text can likely be
 
 \section{Stakeholders}
 \begin{enumerate}
-  \item Fitness Enthusiasts - Quite literally anyone interested in exploring other fitness routines, creating their own routines, and tracking their own personal progression towards goals.
+  \item Fitness Enthusiasts - Anyone interested in exploring other fitness routines, creating their own routines, and tracking their own personal progression towards goals.
   \item Personal Trainers - Olympian provides the ideal platform for trainers to share routines and goals with their clients.
   \item Fitness Advertisers - One avenue of monetization that Olympian could take is running advertisements. Although these advertisements could fall into any category, the largest stakeholders will be Fitness Advertisers,
   as the users of Olympian will be heavily involved with fitness, and thus most likely to buy fitness products.
