fixed spelling errors

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -396,7 +396,7 @@ be covered in the Verification and Validation document.}
 	\item Start workout routine
 	\begin{enumerate}
 		\item Track exercises in-progress
-		\item Track personal quantifiers
+		\item Track personal Quantifiers
 		\item Update current routine
 	\end{enumerate}
 	
@@ -404,11 +404,11 @@ be covered in the Verification and Validation document.}
 	\item Create workout routine
 	\begin{enumerate}
 		\item Post workout routine
-		\item Catagorize routine
+		\item Categorize routine
 		\item Add workout length details
 		\item Add exercise 
 		\begin{enumerate}
-			\item Add quanitfier
+			\item Add Quantifier
 			\item Add Workout Descriptions
 		\end{enumerate}
 	\end{enumerate}
