updated volere template to include unused sections

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -153,42 +153,25 @@ Date 2 & 1.1 & Notes\\
 ~\newpage
 
 
-\section{Introduction}
+\section{The Purpose of the Project}
+\subsection{The User Business or Background of the Project Effort}
+\subsection{Goals of the Project}
 
-\plt{The introduction section is written to introduce the problem.  It starts
-  general and focuses on the problem domain. The general advice is to start with
-a paragraph or two that describes the problem, followed by a ``roadmap''
-paragraph.  A roadmap orients the reader by telling them what sub-sections to
-expect in the Introduction section.}
 
-\subsection{Purpose of Document}
+\section{Project Drivers}
+\subsection{The Purpose of the Project}
+\subsection{Stakeholders}
+\begin{enumerate}
+	\item Fitness Enthusiasts - Anyone interested in exploring other fitness routines, creating their own routines, and tracking their own personal progression towards goals.
+	\item Personal Trainers - Olympian provides the ideal platform for trainers to share routines and goals with their clients.
+	\item Fitness Advertisers - One avenue of monetization that Olympian could take is running advertisements. Although these advertisements could fall into any category, the largest stakeholders will be Fitness Advertisers,
+	as the users of Olympian will be heavily involved with fitness, and thus most likely to buy fitness products.
+\end{enumerate} 
 
-\plt{This section summarizes the purpose of the SRS document.  It does not focus
-  on the problem itself.  The problem is described in the ``Problem
-  Description'' section (Section~\ref{Sec_pd}).  The purpose is for the document
-  in the context of the project itself, not in the context of this course.
-  Although the ``purpose'' of the document is to get a grade, you should not
-  mention this.  Instead, ``fake it'' as if this is a real project.  The purpose
-  section will be similar between projects.  The purpose of the document is the
-  purpose of the SRS, including communication, planning for the design stage,
-  etc.}
-
-\subsection{Scope of Requirements} 
-
-\plt{Modelling the real world requires simplification.  The full complexity of
-  the actual physics, chemistry, biology is too much for existing models, and
-  for existing computational solution techniques.  Rather than say what is in
-  the scope, it is usually easier to say what is not.  You can think of it as
-  the scope is initially everything, and then it is constrained to create the
-  actual scope.  For instance, the problem can be restricted to 2 dimensions, or
-  it can ignore the effect of temperature (or pressure) on the material
-  properties, etc.}  
-
-\plt{The scope section is related to the assumptions section
-  (Section~\ref{sec_assumpt}).  However, the scope and the assumptions are not
-  at the same level of abstraction.  The scope is at a high level.  The focus is
-  on the ``big picture'' assumptions.  The assumptions section lists, and
-  describes, all of the assumptions.}
+\section{Project Constraints}
+\subsection{Mandated Constraints} 
+\subsection{Naming Conventions and Terminology}
+\subsection{Relevant Facts and Assumptions}
 
 \section{General System Description}
 
@@ -265,16 +248,12 @@ characteristics and lists the system constraints.  \plt{This text can likely be
 
 \subsection{System Scope}
 
-\section{Stakeholders}
-\begin{enumerate}
-  \item Fitness Enthusiasts - Anyone interested in exploring other fitness routines, creating their own routines, and tracking their own personal progression towards goals.
-  \item Personal Trainers - Olympian provides the ideal platform for trainers to share routines and goals with their clients.
-  \item Fitness Advertisers - One avenue of monetization that Olympian could take is running advertisements. Although these advertisements could fall into any category, the largest stakeholders will be Fitness Advertisers,
-  as the users of Olympian will be heavily involved with fitness, and thus most likely to buy fitness products.
-\end{enumerate} 
 
 \section{Functional Requirements}
-
+\subsection{The Scope of the Work}
+\subsection{Business Data Model and Data Directory}
+\subsection{The Scope of the Product}
+\subsection{Functional Requirements}
 \noindent \begin{itemize}
 
 \item[R\refstepcounter{reqnum}\thereqnum \label{R_Inputs}:] \plt{Requirements
@@ -367,25 +346,6 @@ be covered in the Verification and Validation document.}
 
 \subsection{Use case Diagram}
 
-
-\section{Likely Changes}    
-
-\noindent \begin{itemize}
-
-\item[LC\refstepcounter{lcnum}\thelcnum\label{LC_meaningfulLabel}:] \plt{Give
-    the likely changes, with a reference to the related assumption (aref), as appropriate.}
-
-\end{itemize}
-
-\section{Unlikely Changes}    
-
-\noindent \begin{itemize}
-
-\item[LC\refstepcounter{lcnum}\thelcnum\label{LC_meaningfulLabel}:] \plt{Give
-    the unlikely changes.  The design can assume that the changes listed will
-    not occur.}
-
-\end{itemize}
 
 \section{Traceability Matrices and Graphs}
 
@@ -506,10 +466,19 @@ general definitions, data definitions, instance models, likely changes, and
 assumptions on each other. Figure~\ref{Fig_RTrace} shows the dependencies of
 instance models, requirements, and data constraints on each other.
 
+\section{Project Issues}
+\subsection{Open Issues}
+\subsection{Off the Shelf Solutions}
+\subsection{New Problems}
+\subsection{Tasks}
+\subsection{Migration to the New Product}
+\subsection{Risks}
+\subsection{Costs}
+\subsection{User Documentation and Training}
+\subsection{Waiting Room}
+\subsection{Ideas for Solutions}
 
-\section{Off the Shelf Solutions}
 
-\section{Risks}
 
 \section{Reference Material}
 
