--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -366,8 +366,8 @@ be covered in the Verification and Validation document.}
 	
 	\item Create User Profile
 	\begin{enumerate}
-		\item setup profile description
-		\item setup attributes
+		\item Setup profile description
+		\item Setup attributes
 	\end{enumerate}
 	
 	\item Edit User Profile
